--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "mongodb": "^2.2.7",
     "react": "^0.14.3",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^0.14.3",
