--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nodemon ./bin/www",
     "webpack": "webpack -d --watch",
-    "test": "mocha"
+    "test": "mocha test/**/*test.js"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.3.13",
