--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_script:
   - sleep 15
   - mongo mydb_test --eval 'db.addUser("BabyUser", "hello");'
 
-script: mocha
+script: mocha test/**/*test.js
