--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: node_js
 node_js:
   - "6"
-#services:
-#  - mongodb
-#before_script:
-#  - sleep 15
-#  - mongo mydb_test --eval 'db.addUser("BabyUser", "hello");'
-
-script: mocha test/**/*test.js
+services:
+  - mongodb
+before_script:
+  - sleep 15
+  - mongo mydb_test --eval 'db.addUser("BabyUser", "hello");'
